[package]
name = "learning_async_rust_with_entirely_too_many_web_servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.20"
polling = "2.8.0"
wepoll = "0.0.0"
